--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <source media="(min-width: 501px)" srcset="images/tablet.jpg">
             <img src="images/phone.jpg" alt="That's me!">
         </picture>   
-       <h2 class="subheader">About Me</h2>
+       <h2 class="subheader"><b>About Me</b></h2>
        
        <p>My name is Marjorie Mekkhavong. I am an emerging software developer with an interest in Mobile Application Developer. I have worked in the health organization for 6 years as Certified Medical Assistant. Currently working Part-time at Northwest Hospital ER. Through my experiences- I've developed accountability, critical thinking, collaboration with a large group, and effective communication. Also performed using medical devices and analyzing medical documents.</p>
        
        <p>During my time in the health organization. My main focus on pursuing Application Development at Year Up within 1 year.</p>
 
-       <h3>Page Origin</h3>
+       <h3><b>Page Origin</b></h3>
 
        <p>The HTML/CSS comes from Sara Newman's Web Fundamentals class as taught at Seattle Central. This page provides a basis for students to build a responsive portal page.</p>
 
